--- a/templates/top-games.html
+++ b/templates/top-games.html
@@ -6,6 +6,10 @@ block content %}
   <div id="filters">
     <form id="rating_count_form" action="/top-games" method="get">
       <div class="form-container">
+        <h5 id='filter-info'>Filters*
+          <span class="tooltip">If no values were informed when the "filter" button is clicked, the default
+            values of filter will be those of the placeholders </span>
+        </h5>
         <label for="rating_count">Minimum number of votes:</label>
         <input type="number" id="rating_count" name="rating_count" value="{{ rating_count }}" placeholder="1000" />
         <label for="limit">Number of games displayed:</label>
