--- a/static/styles/cards.css
+++ b/static/styles/cards.css
@@ -15,6 +15,30 @@
   padding: 5px;
 }
 
+#filter-info {
+  border-bottom: 1px dotted whitesmoke;
+  align-self: center;
+}
+
+.tooltip {
+  visibility: hidden;
+  width: 200px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  /* Position the tooltip */
+  position: absolute;
+  right: 30px;
+  z-index: 1;
+  font-size: 10px;
+}
+
+#filter-info:hover .tooltip {
+  visibility: visible;
+}
+
 #rating_count_form {
   display: flex;
   flex-direction: column;
