--- a/templates/layout.html
+++ b/templates/layout.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/patterns/buttons.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/patterns/page-titles.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/patterns/links.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/patterns/placeholders.css') }}" />
 
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/index.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/navbar.css') }}" />
