fix: added title to best games page

--- a/templates/top-games.html
+++ b/templates/top-games.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %} {% block title %} Steam verde {% endblock %} {%
 block content %}
 
+<h1>Best rated games</h1>
+
 <div id="filters">
   <form id="rating_count_form" action="/top-games" method="get">
     <div class="form-container">
