--- a/static/styles/game-card.css
+++ b/static/styles/game-card.css
@@ -103,7 +103,7 @@
   padding-top: 5%;
   border-radius: 2px;
   width: 420px;
-  height: auto;
+  height: 900px;
   text-align: center;
   padding-bottom: 30px;
 }
@@ -139,6 +139,14 @@
   height: 490px;
   box-shadow: 0px -4px 20px 10px #293e55;
   margin-bottom: 20px;
+  transition: 0.3s ease-in;
+}
+
+#cover:hover {
+  cursor: pointer;
+  width: 380px;
+  height: 507px;
+  box-shadow: 0px -4px 10px 5px #337200;
 }
 
 .rating {
