--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,12 +29,7 @@
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/navbar.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/footer.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/cards.css') }}" />
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/index.css') }}" />
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/navbar.css') }}" />
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/footer.css') }}" />
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/main.css') }}" />
-  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/cards.css') }}" />
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/game-card.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/login_register.css') }}" />
   <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles/social-logins.css') }}" />
 
