--- a/templates/top-games.html
+++ b/templates/top-games.html
@@ -34,19 +34,23 @@ block content %}
 
 <script>
   // <!-- Star rating script-->
+
   //captures the json sent from python
   const json = JSON.parse('{{newJson|tojson}}');
+
   const starRatings = document.querySelectorAll(".star-rating");
+
   //for each game, gets the rating (in base 100) from the json, calculates the width of the stars based on this rating, and sets the style of the star-rating div based on it
   for (let i = 0; i < starRatings.length; i++) {
     const rating = json.data[i].rating.toFixed(2)
-    //math explanation: each star has 25px; the number comes in base 100(i used toFixed(2) to avoid desnecessary math), but the stars are base 5; to turn to base 100 for base 5, the rating is divided by 20 and multipled by 25 witch is the star width.
-    //E.G: if rating = 50, 40/20 = 2 * 25 = 50px of the div will be displayed. That ensures that stars are very precise.
+    //math explanation: each star has 25px; the number comes in base 100(i used toFixed(2) to avoid unnecessary math), but the stars are base 5; to turn to base 100 for base 5, the rating is divided by 20 and multiplied by 25 witch is the star width.
+    //E.G: if rating = 40, 40/20 = 2 * 25 = 50px/125px(40%) of the div will be displayed. That ensures that stars are very precise.
     const starWidth = rating / 20 * 25;
     starRatings[i].style.width = `${starWidth}px`;
   }
 
   // <!-- Platforms script for "show more" button-->
+
   //when clicked, a show more button calls this function with "this.id" as param 
   function showAllPlatforms(clicked_id) {
     //captures the <li> and <button> of the game, based on the id 
